# mytorch

./: .gitignore  CMakeLists.txt  README.md  autograd.py  basic_ops.py  cuda_kernel.py  cuda_utils.py  requirements.txt  tensor.py
cuda/: cuda_utils.py
cuda_kernels/: basic_ops.cu  conv2d.cu  optim.cu
examples/: linear_regression.py
mytorch/: __init__.py  autograd.py  basic_ops.py  broadcast_binary_ops.py  dtype.py  elementwise_ops.py  logger_manager.py  rand.py  rand_generator.py  reduce_ops.py  serialization.py  tensor.py
mytorch/backends/: backend_dispatcher.py  utils.py
mytorch/backends/cpu/: __init__.py  broadcast_binary_ops.py  cast.py  cat.py  elementwise_ops.py  eq.py  mm.py  permute.py  reshape.py
mytorch/backends/cuda/: __init__.py  cublas_lt.py  env.py  (+2 more)
mytorch/cuda/: cublas_lt.py  cuda_utils.py  env.py  memory_allocator.py
mytorch/cuda_kernels/: basic_ops.cu  batch_norm.cu  broadcast_binary_ops.cu  conv2d.cu  cross_entropy.cu  elementwise_ops.cu  im2col.cu  max.cu  pool_ops.cu  reduce_ops.cu
mytorch/examples/: linear_regression.py  mnist.py
mytorch/jit/: script.py
mytorch/nn/: __init__.py  batch_norm.py  conv.py  init.py  linear.py  max_pool.py  module.py  parameter.py  relu.py  sequential.py
mytorch/ops/: basic_ops.py  broadcast_binary_ops.py  cast.py  cat.py  elementwise_ops.py  eq.py  max.py  reduce_ops.py
mytorch/optim/: optimizer.py  sgd.py
mytorch/text/: tokenizer.py
mytorch/vision/: __init__.py  transforms.py
nn/: conv.py  linear.py  module.py  parameter.py
nn/functional/: conv.py
optim/: optimizer.py  sgd.py
(+88 files in other folders)
